--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
     "name": "bg-black",
     "displayName": "BG Black",
     "description": "A dark theme with a black background.",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "publisher": "kurodamaria",
+    "repository": "https://github.com/kurodamaria/bg-black.git",
+    "icon": "./icon.png",
     "engines": {
         "vscode": "^1.59.0"
     },
